--- a/index.html
+++ b/index.html
@@ -2159,8 +2159,8 @@ jQuery(document).ready(function() {
 
                 <!--LOGO-->
                 <a href="index">
-                    <img style="top:21px;" alt="Kibale Welfare and Education Foundation Limited" class="nd_options_position_absolute nd_options_left_15" width="127" src="img/kamuli good hope-01.png" data-lazy-src="img/kamuli good hope-01.png"><noscript>
-                    <img style="top:21px;" alt="Kibale Welfare and Education Foundation Limited" class="nd_options_position_absolute nd_options_left_15" width="127" src="img/kamuli good hope-01.png"></noscript>
+                    <img style="top:21px;" alt="Kibale Welfare and Education Foundation Limited" class="nd_options_position_absolute nd_options_left_15" width="127" src="images/kamuli good hope-01.png" data-lazy-src="img/kamuli good hope-01.png"><noscript>
+                    <img style="top:21px;" alt="Kibale Welfare and Education Foundation Limited" class="nd_options_position_absolute nd_options_left_15" width="127" src="images/kamuli good hope-01.png"></noscript>
                 </a>
 
 
