--- a/index.html
+++ b/index.html
@@ -2159,7 +2159,7 @@ jQuery(document).ready(function() {
 
                 <!--LOGO-->
                 <a href="index">
-                    <img style="top:21px;" alt="Kibale Welfare and Education Foundation Limited" class="nd_options_position_absolute nd_options_left_15" width="127" src="images/kamuli good hope-01.png" data-lazy-src="img/kamuli good hope-01.png"><noscript>
+                    <img style="top:21px;" alt="Kibale Welfare and Education Foundation Limited" class="nd_options_position_absolute nd_options_left_15" width="127" src="images/kamuli good hope-01.png" data-lazy-src="images/kamuli good hope-01.png"><noscript>
                     <img style="top:21px;" alt="Kibale Welfare and Education Foundation Limited" class="nd_options_position_absolute nd_options_left_15" width="127" src="images/kamuli good hope-01.png"></noscript>
                 </a>
 
@@ -2219,8 +2219,8 @@ jQuery(document).ready(function() {
                 <div class="nd_options_section nd_options_height_20"></div>
 
                 <a class="nd_options_display_inline_block mob_logo_img" href="index">
-                    <img alt="" class="nd_options_float_left" width="127" src="img/kamuli good hope-01.png" data-lazy-src="img/kamuli good hope-01.png"><noscript>
-                    <img alt="" class="nd_options_float_left" width="127" src="img/kamuli good hope-01.png"></noscript></a> 
+                    <img alt="" class="nd_options_float_left" width="127" src="images/kamuli good hope-01.png" data-lazy-src="images/kamuli good hope-01.png"><noscript>
+                    <img alt="" class="nd_options_float_left" width="127" src="images/kamuli good hope-01.png"></noscript></a> 
 
 
                 <div class="nd_options_section nd_options_height_10"></div>
