--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="Kibale Welfare and Education Foundation Limited | Charitable Organization in Uganda" />
 	<meta property="og:description" content="Kibale Welfare and Education Foundation Limited  serve the poor and impoverished as a demonstration of God’s unconditional love for all people regardless of race, religion or gender." />
-	<meta property="og:url" content="https://alamalug.org/" />
+	<meta property="og:url" content="https://kwef.com/" />
 	<meta property="og:site_name" content="Kibale Welfare and Education Foundation Limited" />
 	<meta property="article:publisher" content="https://www.facebook.com/alamalug" />
 	
