--- a/about.html
+++ b/about.html
@@ -110,8 +110,6 @@
         <h1>Kibale Welfare and Education Foundation Limited</h1><br>
         <nav>
             <ul>
-                <li><a href="index.html" class="dropbtn">Home</a></li>
-                <li><a href="#" class="dropbtn">About Us</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropbtn">Activities &#8964;</a>
                     <div class="dropdown-content">
@@ -126,13 +124,11 @@
                         <a href="umrah.html">Hijjah and Umrah Sponsorship</a>
                         <a href="food aid.html">Food Aid</a>
                         <a href="well.html">Water Wells</a>
-                        <a href="skill.html">Sewing Machine Distribution</a>
+                        <a href="">Sewing Machine Distribution</a>
                         <a href="widow.html">Widow and Orphan sponsorship</a>
                     </div>
                 </li>
-                <li><a href="https://api.whatsapp.com/send?phone=+256783919781&text=Hi%20KWEF%20Admin,%20I%20would%20like%20to%20donate.%20Insha%20Allah." class="dropbtn">Donate</a></li>
-                <li><a href="wtai://wp/mc;+256783919781" class="dropbtn">Contact</a></li>
-         </ul>            
+                </ul>            
         </nav>
     </header>
     
