--- a/livestock.html
+++ b/livestock.html
@@ -8,9 +8,132 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css">
     <style>
-        /* Add your custom styles here */
+        /* Reset some default styles */
+        body, h1, h2, h3, p, ul, li {
+            margin: 0;
+            padding: 0;
+        }
+
+        /* Header styles */
+        header {
+            background-color: #3498db;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+            position: sticky;
+            top: 0;
+            z-index: 100;
+        }
+
+        header h1 {
+            margin-bottom: 10px;
+        }
+
+        nav ul {
+            list-style: none;
+        }
+
+        nav ul li {
+            display: inline-block;
+            margin-right: 20px;
+        }
+
+        nav ul li a {
+            text-decoration: none;
+            color: #fff;
+        }
+
+        /* Content styles */
+        .content {
+            padding: 20px;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+        /* Back to top button styles */
+        .back-to-top {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            display: none;
+            background-color: #3498db;
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
+            cursor: pointer;
+        }
+
+        /* Style the dropdown button */
+.dropbtn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover, .dropbtn:focus {
+  background-color: #45a049;
+}
+
+/* Style the dropdown content */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Style dropdown links */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
+}
+
+/* Show the dropdown content when the button is clicked or focused */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
     </style>
+    <title>Kibale Welfare and Education Foundation</title>
 </head>
+<body>
+    <header>
+        <h1>Kibale Welfare and Education Foundation Limited</h1><br>
+        <nav>
+            <ul>
+                <li class="dropdown">
+                    <a href="#" class="dropbtn">Activities &#8964;</a>
+                    <div class="dropdown-content">
+                        <a href="mosque.html">Mosque Construction</a>
+                        <a href="school.html">School Construction</a>
+                        <a href="hospital.html">Medical Centers</a>
+                        <a href="construction.html">Needy-house Construction</a>
+                        <a href="adhuhahr.html">Qurbani/ Adhuhah</a>
+                        <a href="ramadhan.html">Ramadhan Iftar</a>
+                        <a href="orphans.html">Orphanage Support</a>
+                        <a href="livestock.html">Live stock</a>
+                        <a href="umrah.html">Hijjah and Umrah Sponsorship</a>
+                        <a href="food aid.html">Food Aid</a>
+                        <a href="well.html">Water Wells</a>
+                        <a href="">Sewing Machine Distribution</a>
+                        <a href="widow.html">Widow and Orphan sponsorship</a>
+                    </div>
+                </li>
+                </ul>            
+        </nav><br></header>
 <div class="col-md-12 mb-4">
     <div class="alert alert-info">
         <p><strong><u>LIVESTOCK PROJECT</u></strong><br> With the intention of sustainable support and self-sufficiency, we present to you our Livestock Project—an initiative aimed at generating income to sustain our noble project activities. In the spirit of Islamic principles, we strive to empower ourselves and our community through the means that Allah has provided.</p>
